--- a/style.css
+++ b/style.css
@@ -1,28 +1,45 @@
-* {
+*:not(html) {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
 
+    box-sizing: border-box;
     width: fit-content;
     height: fit-content;
-
     padding: 0;
     margin: 0;
     border-radius: 0;
 }
 
 html {
-    margin: auto;
+    background-image: url("./diamond.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 body {
+    color: #fff;
+
+    width: 100%;
+    background: linear-gradient(90deg, #8000a040, transparent);
+}
+
+body main {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    max-width: 1440px;
+    width: 100%;
+    height: 100vh;
+    max-height: fit-content;
     padding: 2rem;
 }
 
 body h1 span {
     font-weight: normal;
+}
+
+body p {
+    text-transform: none;
 }
 
 body form {
@@ -45,23 +62,45 @@ body form input {
 
 body form select {
     padding: .5rem;
-    background-color: transparent;
+    background-color: #fff;
     border: 1px solid #808080;
 }
 
 body form button {
+    font-weight: bold;
     color: #fff;
     appearance: none;
 
     padding: .5rem 1rem;
-    background-color: #4090f0;
+    background-color: #8000a0;
     border: none;
 
     cursor: pointer;
+}
+
+body form input:hover, body form select:hover {
+    background-color: #f0f0f0;
 }
 
 body form div {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+body form div div {
+    padding: .5rem;
+    border-left: 2px solid #fff;
+}
+
+body footer {
+    width: 100%;
+    padding: 2rem;
+
+    background-color: #000;
+}
+
+body footer small {
+    font-size: 1rem;
+    text-transform: none;
 }
