--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body main {
     gap: 2rem;
     max-width: 1440px;
     width: 100%;
-    height: 100vh;
-    max-height: fit-content;
+    min-height: 100vh;
+    max-height: max-content;
     padding: 2rem;
 }
 
